# open-voice-pilot

./: README.md  pyproject.toml
cli/: jarvis_cli.py
experiments/: audio_experiments.py  jarvis.py  load_and_view_audio_file.py  load_and_view_audio_file_anim.py  test_growth.py  thread_comm.py
open_voice_pilot/: __init__.py
open_voice_pilot/audio_processing/: __init__.py  audio_processor.py
open_voice_pilot/cli/: __init__.py  jarvis_cli.py
